--- a/backend/app/templates/weekly_report.html
+++ b/backend/app/templates/weekly_report.html
@@ -1,16 +1,16 @@
-<html></html>
-    <body>
-        <p>Sziasztok,</p>
-        <p></p>
-        <p>A mérőeszköz státusz jelentés:</p>
-        <p></p>
-        <p>Érvényes kalibrációk: {{ stats["tools_calibrated"] }} db</p>
-        <p>Lejárt kalibrációk: {{ stats["tools_expired"] }} db</p>
-        <p>Nem kalibrált mérőeszközök: {{ stats["tools_not_calibrated"] }} db</p>
-        <p>Selejtezett mérőeszközök: {{ stats["tools_scrap"] }} db</p>
-        <p>Nem található mérőeszközök: {{ stats["tools_not_found"] }} db</p>
-        <p></p>
-        <p>Készült: {{ stats["date"] }}</p>
-        <p><i>Ez egy automatikus üzenet volt a MEO Trackertől.</i></p>
-    </body>
+<html>
+  <body>
+    <p>Sziasztok,</p>
+    <p></p>
+    <p>A mérőeszköz státusz jelentés:</p>
+    <p></p>
+    <p>Érvényes kalibrációk: {{ stats["tools_calibrated"] }} db</p>
+    <p>Lejárt kalibrációk: {{ stats["tools_expired"] }} db</p>
+    <p>Nem kalibrált mérőeszközök: {{ stats["tools_not_calibrated"] }} db</p>
+    <p>Selejtezett mérőeszközök: {{ stats["tools_scrap"] }} db</p>
+    <p>Nem található mérőeszközök: {{ stats["tools_not_found"] }} db</p>
+    <p></p>
+    <p>Készült: {{ stats["date"] }}</p>
+    <p><i>Ez egy automatikus üzenet volt a MEO Trackertől.</i></p>
+  </body>
 </html>
